Add ElevenLabs Conversational AI Chatbot

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    
+    <!-- ElevenLabs Conversational AI Chatbot -->
+    <elevenlabs-convai agent-id="agent_01jx426hnyex4r29vgjrby9h3b"></elevenlabs-convai>
+    <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
   </body>
 </html>
